# coffee-backend

./: Dockerfile  README.md  admin_api.py  coffee_shop.db  crud.py  database.py  debug.py  dependencies.py  docker-compose.yml  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  reset_database.py  schemas.py  test_api.py  test_deployed.py
api/: cart.py  khqr.py  orders.py  products.py
app/: coffee_shop.db
