[project]
name = "coffee-shop-backend"
version = "1.0.0"
description = "BrewHaven Coffee Shop Backend"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
databases = {extras = ["aiosqlite"], version = "0.8.0"}
python-multipart = "0.0.6"
pydantic = "2.5.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 10000"